# TelemetrySystem

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md
cmake/: StandardProjectSettings.cmake
docs/html/: annotated.html  classdata__reader-members.html  classdata__reader.html  classdt_1_1data__reader-members.html  classdt_1_1data__reader.html  classes.html  classreceiver-members.html  classreceiver.html  data__transfer_8cpp.html  data__transfer_8cpp__incl.map  data__transfer_8cpp__incl.md5  data__transfer_8hpp.html  data__transfer_8hpp__dep__incl.map  data__transfer_8hpp__dep__incl.md5  data__transfer_8hpp__incl.map  data__transfer_8hpp__incl.md5  data__transfer_8hpp_source.html  dir_4dd06f84ff0c2c0d8227dfb3af2820d4.html  dir_4dd06f84ff0c2c0d8227dfb3af2820d4_dep.map  dir_4dd06f84ff0c2c0d8227dfb3af2820d4_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d2fa36ee5515fb854f9f5a35ec1322c8.html  dir_d2fa36ee5515fb854f9f5a35ec1322c8_dep.map  files.html  functions.html  functions_func.html  graph_legend.html  index.html  namespacedt.html  namespacemembers.html  namespacemembers_func.html  namespaces.html
docs/latex/: annotated.tex  classdata__reader.tex  classdt_1_1data__reader.tex  classreceiver.tex  data__transfer_8cpp.tex  data__transfer_8cpp__incl.md5  data__transfer_8hpp.tex  data__transfer_8hpp__dep__incl.md5  data__transfer_8hpp__incl.md5  dir_4dd06f84ff0c2c0d8227dfb3af2820d4.tex  files.tex  (+6 more)
src/: CMakeLists.txt  data_transfer.cpp  data_transfer.hpp
src/receiver/: CMakeLists.txt  receiver.cpp
src/sender/: CMakeLists.txt  sender.cpp
(+8 files in other folders)
